--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,19 @@
   --spacing-52p: 52px;
   --spacing-88p: 88px;
   --spacing-300p: 300px;
+  --spacing-368p: 368px;
+  --spacing-408p: 408px;
+  --spacing-520p: 520px;
   --spacing-646p: 646px;
 }
 
 /* color */
 @theme {
+  --color-Secondary-500: #2DA5F3;
+  --color-Secondary-600: #2484C2;
   --color-Secondary-700: #1b6392;
+  --color-Primary-500: #FA8232;
+  --color-Warning-500: #EBC80C;
 }
 
 @layer components {
