save-up kamchiligi to'g'irlandi

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 @theme {
     --spacing-52p: 52px;
     --spacing-88p: 88px;
+    --spacing-240p: 240px;
     --spacing-300p: 300px;
     --spacing-368p: 368px;
     --spacing-408p: 408px;
